--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -95,6 +95,15 @@
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">
                         <h2 class="text-2xl font-bold text-slate-800">Documents</h2>
                         <div class="flex gap-2">
+                            <div class="flex items-center gap-2">
+                                <label for="dateSort" class="text-sm text-slate-700">Sort:</label>
+                                <select id="dateSort"
+                                    class="px-3 py-2 border border-red-800 rounded-lg shadow-sm text-sm text-black"
+                                    disabled>
+                                    <option value="oldToNew">Oldest</option>
+                                    <option value="newToOld">Newest</option>
+                                </select>
+                            </div>
                             <input type="text" id="searchDocs" placeholder="Search documents..." disabled
                                 class="px-4 py-2 w-64 border border-red-800 rounded-lg shadow-sm text-sm text-black">
                             <select aria-placeholder="All" id="docFilter" disabled
