--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>unofficial.mydy.dypatil.edu</title>
     <link rel="icon" href="/static/src/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="/static/js/login.js" defer></script>
 
