--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="icon" href="/static/src/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="/static/js/dashboard.js"></script>
     <script src="/static/js/logout.js"></script>
     <script src="/static/js/user.js"></script>
+    <script src="/static/js/scrollBtn.js"></script>
 
 </head>
 
@@ -77,10 +79,9 @@
 
                 <!-- Sidebar: Subjects -->
                 <!-- Sidebar: Subjects -->
-                <aside
-                    class="w-72 bg-white border border-gray-200 rounded-xl shadow-sm p-4 h-[calc(100vh-10rem)] sticky top-20 overflow-y-auto">
+                <aside class="w-72 bg-white border border-gray-200 rounded-xl shadow-sm p-4 self-start sticky top-20">
                     <h3 class="text-sm font-semibold text-slate-700 mb-2">Select Subject</h3>
-                    <ul id="subjectGrid" class="flex flex-col divide-y divide-gray-200">
+                    <ul id="subjectGrid" class="flex flex-col divide-y divide-gray-200 min-h-[calc(100vh-30rem)]">
                         <li class="text-center text-gray-400 py-4" id="subjectPlaceholder">
                             Select a semester first
                         </li>
@@ -126,7 +127,13 @@
         </div>
     </section>
 
-
+    <button id="scrollButton"
+        class="fixed bottom-6 right-6 bg-red-800 hover:bg-red-900 text-white rounded-xl w-12 h-12 flex items-center justify-center shadow-lg transition-opacity duration-300 opacity-0">
+        <svg id="scrollIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+    </button>
 
 </body>
 
