--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="icon" href="/static/src/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- <script src="/static/js/dashboard.js"></script> -->
     <script src="/static/js/logout.js"></script>
