refactor(structure): minimal modular architecture

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>unofficial.mydy.dypatil.edu</title>
-    <link rel="icon" href="/static/src/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/static/assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="/static/js/login.js" defer></script>
@@ -16,7 +16,7 @@
     <!-- component -->
     <div class="min-h-screen bg-gray-100 flex items-center justify-center p-4">
         <div class="max-w-md w-full bg-white rounded-xl shadow-lg p-8">
-            <img src="/static/src/images/logo.png" alt="MYDY Logo" class="mx-auto my-5 h-10 w-auto logo" />
+            <img src="/static/assets/images/logo.png" alt="MYDY Logo" class="mx-auto my-5 h-10 w-auto logo" />
             <!-- <h2 class="text-2xl font-bold text-gray-900 mb-6 text-center">Sign In</h2> -->
 
 
