--- a/app/static/pages/dashboard.html
+++ b/app/static/pages/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="icon" href="/static/src/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/static/assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="/static/js/dashboard.js"></script>
@@ -19,7 +19,7 @@
     <!-- Start of Navbar -->
     <nav class="bg-white border-gray-200">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl p-4">
-            <img src="/static/src/images/logo.png" class="h-20" alt="Flowbite Logo" />
+            <img src="/static/assets/images/logo.png" class="h-20" alt="Flowbite Logo" />
             </a>
             <div class="flex items-center space-x-6 rtl:space-x-reverse">
                 <!-- <a href="/static/index.html" class="text-sm  text-red-800">Logout</a> -->
